2025-12-14  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* am/uptex.am (uptex_tests): Fix typo.

2025-12-02  Karl Berry  <karl@freefriends.org>

	* am/uptex.am (up-basic.tex): $(srcdir) not $srcdir.

2025-11-30  Karl Berry  <karl@freefriends.org>

	* am/uptex.am (uptex_tests): depend on up-basic{,-{euc,sjis}}.fmt
	here to avoid race condition when running the tests. Define rules
	to build them.

2025-10.02  Andreas Scherer  <https://ascherer.github.io>

	* upbibtex.ch: Minor improvements for TIE and WEAVE.

2025-10-02  Karl Berry  <karl@freefriends.org>

	* upbibtex.ch: adapt to bibtex.web 0.99e and bibtex.ch.

2025-08-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* pTeX_doc/{{README,Changes,INSTALL}.txt,ChangeLog,
	COPYRIGHT{,.ja}}: Move from ../ptexdir/*.
	* uptexextra.h, am/uptex.am, ptriptest.test:
	Remove ptex and ptexdir/.
	* COPYRIGHT, COPYRIGHT.ja:
	Add Japanese TeX Development Community to copyright holders.
	https://github.com/texjporg/tex-jp-build/issues/32
	* uptex-prntknj.test: Update tests.

2025-08-10  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* am/uptex.am: Clean up unbalanced-braces*.ch .
	https://github.com/texjporg/tex-jp-build/pull/187

2025-06-22  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* uptex-m.ch, kanji.[ch]:
	Fix bug on \uppercase, \lowercase for CJK character.
	Thanks to TAKENO S. and Y. Morimi.
	https://github.com/texjporg/tex-jp-build/issues/179
	* tests/printkanji.tex, tests/pknj-[esu].log:
	Update tests.

2025-04-26  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {nissya,sample,skipjfmp,updvitype,upver,yokotate}.test,
	uptex-{ctrlsym,prntknj,ucs,widow}.test, tests/pver{1,2}.tex,
	tests/chcode.{pl,tfm}, tests/chcode-{euc,jis,sjis,utf8}.pl,
	tests/let_char_token.tex, tests/chartoken.log,
	tests/control-symbol.tex, tests/ctrlsym.tex,
	tests/ctrlsym-{e,s}.log, tests/jctrlsym-{e,u}.log,
	tests/ptexlineendmode.tex,
	tests/endlinechar.tex, tests/endline.log,
	tests/up-endlinea.typ, tests/up-lineenda.typ,