@@ -51,6 +51,7 @@
 \write16{丽::\the\kcatcode"2F800}% U+2F800 CJK Compatibility Ideographs Supplement
 \write16{𰀀::\the\kcatcode"30000}% U+30000 CJK Unified Ideographs Extension G
 \write16{𱍐::\the\kcatcode"31350}% U+31350 CJK Unified Ideographs Extension H
+\write16{𲎰::\the\kcatcode"323B0}% U+323B0 CJK Unified Ideographs Extension J
 
 % kana=17 {hiragana, katakana}
 \write16{あ::\the\kcatcode"3042}% U+3042 Hiragana
