@@ -25,6 +25,7 @@ A::15
 丽::16
 𰀀::16
 𱍐::16
+𲎰::16
 あ::17
 ア::17
 ㇰ::17
