@@ -955,8 +955,8 @@ begin
     else if k=@"93 then return { Hangul Syllables }
     else if k=@"94 then return { Hangul Jamo Extended-B }
     else if k=@"99 then return { CJK Compatibility Ideographs }
-    else if (k>=@"115)and(k<=@"118) then return { Kana Extended-B .. Small Kana Extension }
-    else if (k>=@"145)and(k<=@"14F) then return { CJK Unified Ideographs Extension B .. J }
+    else if (k>=@"11A)and(k<=@"11D) then return { Kana Extended-B .. Small Kana Extension }
+    else if (k>=@"14C)and(k<=@"156) then return { CJK Unified Ideographs Extension B .. J }
     else if k=@"1FE then return { Fullwidth digit and latin alphabet }
     else if k=@"1FF then return; { Halfwidth katakana }
     end
